-【plugin】WebPushで、未知のサーバ（ブラウザ）でも登録可能な設定を追加。
-【plugin】WebPush通知登録済みでも、30日経過後は再度登録処理をするようにしました。((こうしておかないと何らかの要因でサーバ側のWebPush登録情報が破棄された場合、2度とブラウザ側から登録処理ができなくなってしまいます。))
-【fix/plugin】WebPushプラグインで、初回の登録処理が内部的に2度行われる。
-【fix】ローカルサーバと高速なブラウザにおいてデザイン編集がうまく機能しない。
-【fix】数字のみのタグ名をタグ一覧から編集できない。
-【fix】タグ名編集時、同名のタグがあってもエラーにならない。（Thanks to Kaede）
-【fix/テーマ】hatena2テーマとnature-forestテーマで個別の色を変更するとエラーになる。

*Ver3.12 : 2017/05/13

-【fix】【Markdown】何も入力しないで保存するとサーバが応答しなくなる。（Thanks to Kaede）
-【fix】http://adiary.org へのリンクを https://adiary.org に修正。
-【Ver3.12a】【fix】Markdown入力で、引用やリストブロック直後のテーブル記法が認識されない。（Thanks to Kaede）
-【Ver3.12b】【PostgreSQL】DBD::Pgの非互換な修正（Ver3.6.0～）により発生した不具合に対応（[http://adiary.blog.abk.nu/0367:詳細]）

*Ver3.11 : 2017/04/27

-MathJaxのURLが2017/04/30で期限切れとなるので、更新しました。（[http://adiary.blog.abk.nu/0393#c1:Thanks to リップル]）
-【plugin】WebPush登録ボタンを一度押したらオフにするように。
-【fix】麻雀記法で横に倒した牌の位置が下に揃わない。
-【fix】WebPushプラグインの1回の送信先数が3件だった（デバッグコードの削除忘れ）。

*Ver3.10 : 2017/04/20

-主な変更点
--メニューの構成を変更しました。
--【plugin】[g:Google AMP:AMP表示]に対応しました。
--【plugin】サイトマップに対応しました。サイトマップ(XML)を自動で生成できます。
--【plugin】WebPushに対応しました。Android/Chromeでも利用可能。
--【fix/[bf:XSS脆弱性]】[em:マルチブログで第三者へのレンタル時]に、data-url属性が書けてしまうことによるXSS脆弱性を修正しました。
--pop/akaneテーマを収録しました。
--他ブログから移行用に、[bf:画像取り込み機能]を付けました。
--IE8以前のサポートを止めました（関連コードを削除しました）。
-システム面
--nginxに正式対応しました。
--ページキッシュ機能を実装しました。
--スタートアップスクリプトを更新し、エラー処理を安定させました。
---[bf:FastCGI運用の方はApacheかスクリプトの再起動が必要です！]
--jQuery 3にアップデート。
--jQuery UIをアップデート。
-入力記法
--MathJax/TeX記法を使いやすくしました。特に[https://adiary.org/v3man/Satsuki-detail/MathJax:#TeX:TeXモード]を強化しました。
--簡単に[http://adiary.org/v3man/Satsuki-tag/base:#banner:画像でリンクできる]ようになりました。（[https://twitter.com/uni_sio/status/768243697435541504:Thanks to しおこんぶ]）
--自由変数展開後に、更に記法タグを処理するよう仕様変更しました。（[http://field-city.xsrv.jp/nomura/iot/0183:Thanks to nomura]）
--自由変数定義中の記法タグが展開されるようになりました。（[http://field-city.xsrv.jp/nomura/iot/0183:Thanks to nomura]）
--key/id記法でリンクの title 属性に、記事タイトルを設定するようにしました。（[http://adiary.blog.abk.nu/0388#c1:Thanks to t-hide]）