@@ -7,6 +7,7 @@
 -【plugin】WebPushで、未知のサーバ（ブラウザ）でも登録可能な設定を追加。
 -【plugin】WebPush通知登録済みでも、30日経過後は再度登録処理をするようにしました。((こうしておかないと何らかの要因でサーバ側のWebPush登録情報が破棄された場合、2度とブラウザ側から登録処理ができなくなってしまいます。))
 -【fix/plugin】WebPushプラグインで、初回の登録処理が内部的に2度行われる。
+-【fix/plugin】Twitter通知プラグイン「"'<>」などの文字が文字化けしてしまう。
 -【fix】ローカルサーバと高速なブラウザにおいてデザイン編集がうまく機能しない。
 -【fix】数字のみのタグ名をタグ一覧から編集できない。
 -【fix】タグ名編集時、同名のタグがあってもエラーにならない。（Thanks to Kaede）
